--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
         "sirv": "^0.4.0"
     },
     "devDependencies": {
+        "node-sass": "^4.13.1",
         "npm-run-all": "^4.1.5",
         "postcss-cli": "^7.1.0",
         "prettier": "^1.19.1",
         "sapper": "^0.27.0",
         "svelte": "^3.0.0",
         "svelte-loader": "^2.9.0",
+        "svelte-preprocess-sass": "^0.2.0",
         "tailwindcss": "^1.2.0",
         "webpack": "^4.7.0"
     }
